--- a/css/master.css
+++ b/css/master.css
@@ -3,6 +3,14 @@ html, body {
   padding: 0;
 }
 
-.highlight {
-  font-size: 1.5em;
+.country:hover {
+  cursor: pointer;
+}
+
+.globe:hover {
+  cursor: move;
+}
+
+.hidden {
+  display: none;
 }
