--- a/css/master.css
+++ b/css/master.css
@@ -23,7 +23,8 @@ a {
 
 body {
   background-color: aliceblue;
-  height: 100%
+  height: 100%;
+  position: relative;
 }
 
 .country:hover {
@@ -42,6 +43,8 @@ body {
   height: 30px;
   background-color: white;
   padding: 15px;
+  position: absolute;
+  bottom: 30;
 }
 
 .footer-links {
