--- a/css/master.css
+++ b/css/master.css
@@ -116,6 +116,33 @@ body {
   color: steelblue;
 }
 
+.modal {
+  z-index: 7;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  justify-content: center;
+}
+
+.spinner-cover {
+  background-color: white;
+  opacity: 0.8;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.icon {
+  z-index: 8;
+  align-self: center;
+  max-width: 40%;
+  max-height: 40%;
+  color: lightcoral;
+}
+
 .footer {
   height: 30px;
   width: 100%;
